--- a/app/src/main/res/layout/activity_counsel_details.xml
+++ b/app/src/main/res/layout/activity_counsel_details.xml
@@ -5,23 +5,13 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".views.CaseDetailsActivity">
+    tools:context=".views.CounselDetailsActivity">
 
     <android.support.v7.widget.Toolbar
         android:id="@+id/toolbar"
         android:layout_width="match_parent"
         android:layout_height="?attr/actionBarSize"
-        android:background="?attr/colorPrimary"
-        />
-
-        <!--<TextView-->
-            <!--android:layout_width="match_parent"-->
-            <!--android:layout_height="wrap_content"-->
-            <!--android:layout_gravity="center"-->
-            <!--android:text="Case Details"-->
-            <!--android:textSize="16sp"-->
-            <!--android:textStyle="bold" />-->
-
+        android:background="?attr/colorPrimary" />
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -29,6 +19,27 @@
         android:layout_marginLeft="20dp"
         android:layout_marginTop="20dp"
         android:orientation="vertical">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="15dp">
+
+            <TextView
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="3"
+                android:text="Counselor"
+                android:textStyle="bold" />
+
+            <TextView
+                android:id="@+id/counselor_tv"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="7" />
+
+        </LinearLayout>
+
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -70,25 +81,6 @@
 
         </LinearLayout>
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="15dp">
-
-            <TextView
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="3"
-                android:text="Case no"
-                android:textStyle="bold" />
-
-            <TextView
-                android:id="@+id/case_number_tv"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="7" />
-
-        </LinearLayout>
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -119,11 +111,11 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="3"
-                android:text="Next Date"
+                android:text="Hearing Date"
                 android:textStyle="bold" />
 
             <TextView
-                android:id="@+id/next_date_tv"
+                android:id="@+id/hearing_date_tv"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="7" />
@@ -139,11 +131,11 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="3"
-                android:text="Stage"
+                android:text="Status"
                 android:textStyle="bold" />
 
             <TextView
-                android:id="@+id/stage_tv"
+                android:id="@+id/status_tv"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="7" />
@@ -159,11 +151,11 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="3"
-                android:text="Prev date"
+                android:text="Conference date"
                 android:textStyle="bold" />
 
             <TextView
-                android:id="@+id/prev_date_tv"
+                android:id="@+id/conference_date_tv"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="7" />
@@ -179,11 +171,11 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="3"
-                android:text="Client"
+                android:text="Conference Time"
                 android:textStyle="bold" />
 
             <TextView
-                android:id="@+id/client_tv"
+                android:id="@+id/conference_time_tv"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="7" />
@@ -199,35 +191,17 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="3"
-                android:text="Client Phone"
+                android:text="Conference Place"
                 android:textStyle="bold" />
 
             <TextView
-                android:id="@+id/client_phone_tv"
+                android:id="@+id/conference_place_tv"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="7" />
 
         </LinearLayout>
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="15dp">
-
-            <TextView
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="3"
-                android:text="Category"
-                android:textStyle="bold" />
-
-            <TextView
-                android:id="@+id/category_tv"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="7" />
-
-        </LinearLayout>
     </LinearLayout>
+
 </LinearLayout>
