--- a/app/src/main/res/layout/activity_matter_sent.xml
+++ b/app/src/main/res/layout/activity_matter_sent.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".views.AllCasesActivity"
+    tools:context=".views.MatterSentActivity"
     android:orientation="vertical">
 
     <android.support.v7.widget.Toolbar
@@ -13,12 +13,5 @@
         android:layout_height="?attr/actionBarSize"
         android:background="?attr/colorPrimary"
         />
-
-    <android.support.v7.widget.RecyclerView
-        android:layout_margin="10dp"
-        android:id="@+id/all_cases_rv"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
-
 
 </LinearLayout>
