--- a/app/src/main/res/layout/legal_query_item.xml
+++ b/app/src/main/res/layout/legal_query_item.xml
@@ -12,7 +12,8 @@
         android:id="@+id/card_relative_layout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:padding="5dp">
+        android:padding="5dp"
+        >
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -28,11 +29,11 @@
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="3"
-                    android:text="Court"
+                    android:text="Customer"
                     android:textStyle="bold" />
 
                 <TextView
-                    android:id="@+id/court_name_tv"
+                    android:id="@+id/customer_name_tv"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="7" />
@@ -48,11 +49,11 @@
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="3"
-                    android:text="Case no"
+                    android:text="Quote Type"
                     android:textStyle="bold" />
 
                 <TextView
-                    android:id="@+id/case_number_tv"
+                    android:id="@+id/quote_type_tv"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="7" />
@@ -68,51 +69,11 @@
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="3"
-                    android:text="Parties"
+                    android:text="Status"
                     android:textStyle="bold" />
 
                 <TextView
-                    android:id="@+id/parties_name_tv"
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="7" />
-
-            </LinearLayout>
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="5dp">
-
-                <TextView
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="3"
-                    android:text="Next Date"
-                    android:textStyle="bold" />
-
-                <TextView
-                    android:id="@+id/next_date_tv"
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="7" />
-
-            </LinearLayout>
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="5dp">
-
-                <TextView
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="3"
-                    android:text="Stage"
-                    android:textStyle="bold" />
-
-                <TextView
-                    android:id="@+id/stage_tv"
+                    android:id="@+id/status_tv"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="7" />
