--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -13,7 +13,8 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        >
 
         <android.support.v7.widget.Toolbar
             android:id="@+id/toolbar"
@@ -21,7 +22,7 @@
             android:layout_height="?attr/actionBarSize"
             android:layout_alignParentTop="true"
             android:layout_gravity="center_horizontal"
-            android:background="?attr/colorPrimary"/>
+            android:background="?attr/colorPrimary" />
 
         <android.support.design.widget.TabLayout
             android:id="@+id/tab_layout"
@@ -47,7 +48,10 @@
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
         android:layout_gravity="start"
+        android:background="@drawable/menu_background"
         app:headerLayout="@layout/nav_header_home"
+        app:itemTextColor="@android:color/white"
+        app:itemIconTint="#FFFFFF"
         app:menu="@menu/activity_home_drawer" />
 
 </android.support.v4.widget.DrawerLayout>
