--- a/app/src/main/res/layout/nav_header_home.xml
+++ b/app/src/main/res/layout/nav_header_home.xml
@@ -11,14 +11,20 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin">
 
+    <ImageView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:background="@drawable/profile_icon"
+        android:layout_gravity="center"/>
+
     <TextView
         android:id="@+id/user_name_text_view"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:paddingTop="@dimen/nav_header_vertical_spacing"
-        android:textStyle="bold"
-        android:textSize="18sp"
-        android:textColor="@android:color/black"/>
+        android:textSize="25sp"
+        android:textColor="@android:color/white"
+        android:gravity="center"/>
 
 
 </LinearLayout>
