--- a/app/src/main/res/menu/activity_home_drawer.xml
+++ b/app/src/main/res/menu/activity_home_drawer.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:showIn="navigation_view">
+    tools:showIn="navigation_view"
+    >
 
     <group android:id="@+id/main_option"
         android:checkableBehavior="single"
@@ -9,43 +10,53 @@
 
         <item
             android:id="@+id/nav_cases"
-            android:title="Cases " />
+            android:title="Cases "
+            android:icon="@drawable/case_icon"/>
 
         <item
             android:id="@+id/nav_counsel_desk"
-            android:title="Counsel Desk" />
+            android:title="Counsel Desk"
+            android:icon="@drawable/desk"/>
 
         <item
             android:id="@+id/nav_lawyer_support_desk"
-            android:title="Lawyer Support Desk" />
+            android:title="Lawyer Support Desk"
+            android:icon="@drawable/support"/>
 
         <item
             android:id="@+id/nav_legal_queries"
-            android:title="Legal Queries" />
+            android:title="Legal Queries"
+            android:icon="@drawable/query_icon"/>
 
         <item
             android:id="@+id/nav_professional_fees"
-            android:title="Professional Fees" />
+            android:title="Professional Fees"
+            android:icon="@drawable/fees_icon"/>
 
         <item
             android:id="@+id/nav_account_details"
-            android:title="Account Details" />
+            android:title="Account Details"
+            android:icon="@drawable/full_name_icon"/>
 
         <item
             android:id="@+id/nav_password_reset"
-            android:title="Password Reset" />
+            android:title="Password Reset"
+            android:icon="@drawable/password_icon"/>
 
         <item
             android:id="@+id/nav_find_interns"
-            android:title="Find Interns" />
+            android:title="Find Interns"
+            android:icon="@drawable/find_intern"/>
 
         <item
             android:id="@+id/nav_post_jobs"
-            android:title="Post Jobs" />
+            android:title="Post Jobs"
+            android:icon="@drawable/job_icon"/>
 
         <item
             android:id="@+id/nav_logout"
-            android:title="Logout" />
+            android:title="Logout"
+            android:icon="@drawable/logout"/>
 
     </group>
 
@@ -57,8 +68,9 @@
 
         <item
             android:id="@+id/nav_option_cases"
-            android:icon="@drawable/arrow_left"
-            android:title="Cases" />
+            android:icon="@drawable/ic_keyboard_arrow_left_black_24dp"
+            android:title="Cases"
+            android:iconTint="@android:color/white"/>
 
         <item
             android:id="@+id/nav_upcoming_cases"
@@ -81,7 +93,7 @@
         >
 
         <item
-            android:icon="@drawable/arrow_left"
+            android:icon="@drawable/ic_keyboard_arrow_left_black_24dp"
             android:id="@+id/nav_option_lawyer_support_desk"
             android:title="Lawyer Support Desk" />
 
