--- a/app/src/main/res/layout/activity_account_details.xml
+++ b/app/src/main/res/layout/activity_account_details.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/background"
     android:orientation="vertical"
     tools:context=".views.AccountDetailsActivity">
 
@@ -11,11 +12,14 @@
         android:id="@+id/toolbar"
         android:layout_width="match_parent"
         android:layout_height="?attr/actionBarSize"
-        android:background="?attr/colorPrimary" />
+        android:background="@android:color/black"
+        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
+        app:titleTextColor="@android:color/white" />
 
     <android.support.v4.widget.NestedScrollView
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:background="@drawable/white_background">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -30,7 +34,8 @@
                 android:layout_height="wrap_content"
                 android:hint="Firm Name"
                 android:maxLines="1"
-                android:singleLine="true" />
+                android:singleLine="true"
+                />
 
             <EditText
                 android:id="@+id/email_et"
