--- a/app/src/main/res/layout/activity_all_cases.xml
+++ b/app/src/main/res/layout/activity_all_cases.xml
@@ -8,17 +8,27 @@
     android:orientation="vertical">
 
     <android.support.v7.widget.Toolbar
+        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
         android:id="@+id/toolbar"
         android:layout_width="match_parent"
         android:layout_height="?attr/actionBarSize"
-        android:background="?attr/colorPrimary"
-        />
+        android:background="@android:color/black"
+        app:titleTextColor="@android:color/white"/>
+
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="@drawable/white_background">
 
     <android.support.v7.widget.RecyclerView
-        android:layout_margin="10dp"
+        android:layout_marginLeft="30dp"
+        android:layout_marginRight="30dp"
+        android:layout_marginTop="20dp"
         android:id="@+id/all_cases_rv"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
+        android:layout_height="match_parent"
+       />
 
+    </RelativeLayout>
 
 </LinearLayout>
