--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -14,32 +14,38 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
-        >
+        android:background="@drawable/white_background">
 
         <android.support.v7.widget.Toolbar
             android:id="@+id/toolbar"
+            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
             android:layout_alignParentTop="true"
             android:layout_gravity="center_horizontal"
-            android:background="?attr/colorPrimary" />
+            android:background="@android:color/black"
+            app:titleTextColor="@android:color/white"/>
 
         <android.support.design.widget.TabLayout
             android:id="@+id/tab_layout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_below="@+id/toolbar"
-            android:background="@android:color/white"
+            android:background="#414141"
             android:elevation="6dp"
             android:minHeight="?attr/actionBarSize"
-            app:tabIndicatorColor="@android:color/black"
-            app:tabTextColor="@android:color/black" />
+            app:tabIndicatorColor="@android:color/white"
+            app:tabTextColor="@android:color/white"
+            app:tabTextAppearance="@style/CustomTabText"/>
 
         <android.support.v4.view.ViewPager
             android:id="@+id/cases_view_pager"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_below="@+id/tab_layout" />
+            android:layout_below="@+id/tab_layout"
+            android:layout_marginLeft="30dp"
+            android:layout_marginRight="30dp"
+            android:layout_marginTop="20dp"/>
 
     </LinearLayout>
 
