--- a/app/src/main/res/layout/cases_item.xml
+++ b/app/src/main/res/layout/cases_item.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layout_width="match_parent"
+    android:layout_height="100dp"
     android:layout_margin="5dp"
     android:background="@android:color/darker_gray"
     android:elevation="5dp"
@@ -11,31 +11,37 @@
     <RelativeLayout
         android:id="@+id/card_relative_layout"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:padding="5dp">
+        android:layout_height="wrap_content">
+
+        <TextView
+            android:layout_width="5dp"
+            android:layout_height="match_parent"
+            android:background="@android:color/black" />
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical">
+            android:layout_marginBottom="10dp"
+            android:layout_marginLeft="15dp"
+            android:layout_marginTop="5dp"
+            android:orientation="vertical"
+            android:padding="5dp">
 
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="5dp">
+                android:layout_height="wrap_content">
 
                 <TextView
-                    android:layout_width="0dp"
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_weight="3"
-                    android:text="Court"
+                    android:text="Court Name: "
+                    android:textColor="@android:color/black"
                     android:textStyle="bold" />
 
                 <TextView
                     android:id="@+id/court_name_tv"
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="7" />
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content" />
 
             </LinearLayout>
 
@@ -45,35 +51,29 @@
                 android:layout_marginTop="5dp">
 
                 <TextView
-                    android:layout_width="0dp"
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_weight="3"
-                    android:text="Case no"
+                    android:text="Case no: "
+                    android:textColor="@android:color/black"
                     android:textStyle="bold" />
 
                 <TextView
                     android:id="@+id/case_number_tv"
-                    android:layout_width="0dp"
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_weight="7" />
-
-            </LinearLayout>
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="5dp">
+                    android:layout_weight="10" />
 
                 <TextView
-                    android:layout_width="0dp"
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_weight="3"
-                    android:text="Parties"
+                    android:layout_gravity="center"
+                    android:text="Parties: "
+                    android:textColor="@android:color/black"
                     android:textStyle="bold" />
 
                 <TextView
                     android:id="@+id/parties_name_tv"
-                    android:layout_width="0dp"
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_weight="7" />
 
@@ -85,39 +85,34 @@
                 android:layout_marginTop="5dp">
 
                 <TextView
-                    android:layout_width="0dp"
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_weight="3"
-                    android:text="Next Date"
+                    android:text="Next Date: "
+                    android:textColor="@android:color/black"
                     android:textStyle="bold" />
 
                 <TextView
                     android:id="@+id/next_date_tv"
-                    android:layout_width="0dp"
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_weight="7" />
 
-            </LinearLayout>
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="5dp">
-
                 <TextView
-                    android:layout_width="0dp"
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_weight="3"
-                    android:text="Stage"
+                    android:layout_gravity="center"
+                    android:text=" Stage: "
+                    android:textColor="@android:color/black"
                     android:textStyle="bold" />
 
                 <TextView
                     android:id="@+id/stage_tv"
-                    android:layout_width="0dp"
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_weight="7" />
 
             </LinearLayout>
+
 
         </LinearLayout>
 
