--- a/app/src/main/res/layout/activity_case_details.xml
+++ b/app/src/main/res/layout/activity_case_details.xml
@@ -35,6 +35,15 @@
                 android:layout_height="match_parent"
                 android:background="@android:color/black"/>
 
+            <ImageView
+                android:id="@+id/edit_case_details_iv"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:background="@drawable/edit_icon_16"
+                android:layout_gravity="right"
+                android:layout_margin="10dp"
+                android:padding="5dp"/>
+
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
