--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -45,7 +45,7 @@
             android:maxLines="1"
             android:singleLine="true"
             android:textColor="@android:color/white"
-            android:textSize="13sp"/>
+            android:textSize="@dimen/edit_text_size"/>
 
         <TextView
             android:layout_width="wrap_content"
@@ -66,7 +66,7 @@
             android:maxLines="1"
             android:singleLine="true"
             android:textColor="@android:color/white"
-            android:textSize="13sp"/>
+            android:textSize="@dimen/edit_text_size"/>
 
         <TextView
             android:layout_width="wrap_content"
