--- a/app/src/main/res/layout/activity_registration.xml
+++ b/app/src/main/res/layout/activity_registration.xml
@@ -44,7 +44,7 @@
             android:maxLines="1"
             android:singleLine="true"
             android:textColor="@android:color/white"
-            android:textSize="13sp"/>
+            android:textSize="@dimen/edit_text_size"/>
 
         <TextView
             android:layout_width="wrap_content"
@@ -66,7 +66,7 @@
             android:maxLines="1"
             android:singleLine="true"
             android:textColor="@android:color/white"
-            android:textSize="13sp"/>
+            android:textSize="@dimen/edit_text_size"/>
 
         <TextView
             android:layout_width="wrap_content"
@@ -87,7 +87,7 @@
             android:maxLines="1"
             android:singleLine="true"
             android:textColor="@android:color/white"
-            android:textSize="13sp"/>
+            android:textSize="@dimen/edit_text_size"/>
 
         <TextView
             android:layout_width="wrap_content"
@@ -108,7 +108,7 @@
             android:maxLines="1"
             android:singleLine="true"
             android:textColor="@android:color/white"
-            android:textSize="13sp"/>
+            android:textSize="@dimen/edit_text_size"/>
 
         <TextView
             android:layout_width="wrap_content"
@@ -129,7 +129,7 @@
             android:maxLines="1"
             android:singleLine="true"
             android:textColor="@android:color/white"
-            android:textSize="13sp"/>
+            android:textSize="@dimen/edit_text_size"/>
 
         <TextView
             android:layout_width="wrap_content"
