--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -6,4 +6,6 @@
     <dimen name="nav_header_height">176dp</dimen>
     <dimen name="fab_margin">16dp</dimen>
     <dimen name="design_tab_text_size_2line" tools:override="true">10sp</dimen>
+
+    <dimen name="edit_text_size">13sp</dimen>
 </resources>
